Fancy build using gulp and rollup + babel

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>audio-record-button - Demo</title>
-  <link rel="import" href="audio-record-button.html">
-  <link rel="import" href="audio-play-button.html">
+  <link rel="import" href="build/audio-record-button.html">
+  <link rel="import" href="build/audio-play-button.html">
   <style>
     body {
       font-family: 'Verdana';
