--- a/src/audio-record-button.html
+++ b/src/audio-record-button.html
@@ -3,9 +3,9 @@
 Copyright (c) 2016 herr.kaste <herr.kaste@gmail.com>. All rights reserved.
 This code may only be used under the BSD style license.
 -->
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-icons/av-icons.html">
-<link rel="import" href="../paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../iron-icons/av-icons.html">
+<link rel="import" href="../../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="toggle-button.html">
 
 <dom-module id="audio-record-button">
